# AISystemsEngineer

./: .dockerignore  .gitignore  .replit  DEPLOYMENT.md  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  train_pipeline.py
.github/workflows/: ci.yml  ml-pipeline.yml  train.yml
config/: config.yaml
src/api/: main.py
src/data/: data_loader.py
src/models/: trainer.py
src/utils/: config_loader.py  logger.py
tests/: test_api.py  test_data_loader.py
